Dev - fix: Add the DataTables Bootstrap integration JS to the bootstrap example. It isn't stricktly needed here, since it is mainly about the pagination, but it is proper to have it here, and it does include the full layout in sDom for Bootstrap

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -15,6 +15,7 @@
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
 		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="http://datatables.github.com/Plugins/integration/bootstrap/dataTables.bootstrap.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
