--- a/right_column.html
+++ b/right_column.html
@@ -7,11 +7,11 @@
 
 		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
 		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
-		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+		<link rel="stylesheet" type="text/css" href="media/css/dataTables.fixedColumns.css">
 
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
-		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="media/js/dataTables.fixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
@@ -21,7 +21,7 @@
 					"bScrollCollapse": true,
 					"bPaginate": false
 				} );
-				new FixedColumns( oTable, {
+				new $.fn.dataTable.FixedColumns( oTable, {
 					"iLeftColumns": 0,
 					"iRightColumns": 1
 				} );
@@ -475,7 +475,7 @@
  		"sScrollXInner": "150%",
  		"bScrollCollapse": true
  	} );
- 	new FixedColumns( oTable, {
+ 	new $.fn.dataTable.FixedColumns( oTable, {
 		"iLeftColumns": 0,
 		"iRightColumns": 1
  	} );
