--- a/row_grouping.html
+++ b/row_grouping.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
 		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
-		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+		<link rel="stylesheet" type="text/css" href="media/css/dataTables.fixedColumns.css">
 
 		<style type="text/css">
 			.FixedColumns_Cloned th { background-color: white; }
@@ -18,7 +18,7 @@
 
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
-		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="media/js/dataTables.fixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
@@ -33,7 +33,7 @@
 					]
 				} );
 
-				new FixedColumns( oTable, {
+				new $.fn.dataTable.FixedColumns( oTable, {
 					"fnDrawCallback": function ( left, right ) {
 						var oSettings = oTable.fnSettings();
 						if ( oSettings.aiDisplay.length == 0 )
@@ -524,7 +524,7 @@
 		]
 	} );
 
-	new FixedColumns( oTable, {
+	new $.fn.dataTable.FixedColumns( oTable, {
 		"fnDrawCallback": function ( left, right ) {
 			var oSettings = oTable.fnSettings();
 			if ( oSettings.aiDisplay.length == 0 )
