--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		
 		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
 		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
-		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
-
+		<link rel="stylesheet" type="text/css" href="media/css/dataTables.fixedColumns.css">
+		
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
-		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="media/js/dataTables.fixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
@@ -22,7 +22,7 @@
 					"bScrollCollapse": true,
 					"bPaginate": false
 				} );
-				new FixedColumns( oTable );
+				new $.fn.dataTable.FixedColumns( oTable );
 			} );
 		</script>
 	</head>
@@ -61,7 +61,7 @@
 		<tr class="gradeX">
 			<td>Trident</td>
 			<td>Internet
-				 Explorer 4.0</td>
+				 Explorer<br> 4.0</td>
 			<td>Win 95+</td>
 			<td class="center">4</td>
 			<td class="center">X</td>
@@ -106,7 +106,7 @@
 		</tr>
 		<tr class="gradeA">
 			<td>Gecko</td>
-			<td>Firefox 1.0</td>
+			<td>Firefox<br> 1.0</td>
 			<td>Win 98+ / OSX.2+</td>
 			<td class="center">1.7</td>
 			<td class="center">A</td>
@@ -474,7 +474,7 @@
 		"sScrollXInner": "150%",
 		"bScrollCollapse": true
 	} );
-	new FixedColumns( oTable );
+	new $.fn.dataTable.FixedColumns( oTable );
 } );</pre>
 
 
