--- a/left_right_columns.html
+++ b/left_right_columns.html
@@ -21,7 +21,7 @@
 		</style>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
-		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="media/js/dataTables.fixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
@@ -44,7 +44,7 @@
 					"aaSorting": [[ 1, 'asc' ]]
 				} );
 				
-				new FixedColumns( oTable, {
+				new $.fn.dataTable.FixedColumns( oTable, {
 					"iLeftColumns": 1,
 					"iRightColumns": 1
 				} );
@@ -631,7 +631,7 @@
 		"aaSorting": [[ 1, 'asc' ]]
 	} );
 	
-	new FixedColumns( oTable, {
+	new $.fn.dataTable.FixedColumns( oTable, {
 		"iLeftColumns": 1,
 		"iRightColumns": 1
 	} );
