--- a/row_grouping_height.html
+++ b/row_grouping_height.html
@@ -8,11 +8,11 @@
 		
 		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
 		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
-		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+		<link rel="stylesheet" type="text/css" href="media/css/dataTables.fixedColumns.css">
 
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
-		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="media/js/dataTables.fixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
@@ -23,7 +23,7 @@
 					"bPaginate": false
 				} );
 
-				new FixedColumns( oTable, {
+				new $.fn.dataTable.FixedColumns( oTable, {
 					"iLeftWidth": 150,
 					"fnDrawCallback": function ( left, right ) {
 						var that = this, groupVal = null, matches = 0, heights = [], index = -1;
@@ -498,7 +498,7 @@
 		"bPaginate": false
 	} );
 
-	new FixedColumns( oTable, {
+	new $.fn.dataTable.FixedColumns( oTable, {
 		"iLeftWidth": 150,
 		"fnDrawCallback": function ( left, right ) {
 			var that = this, groupVal = null, matches = 0, heights = [], index = -1;
