--- a/scale_relative.html
+++ b/scale_relative.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
 		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables.css">
-		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+		<link rel="stylesheet" type="text/css" href="media/css/dataTables.fixedColumns.css">
 
 		<style type="text/css">
 			table.DTFC_Cloned th { white-space: nowrap; }
@@ -16,7 +16,7 @@
 		
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
-		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="media/js/dataTables.fixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
@@ -26,7 +26,7 @@
 					"bScrollCollapse": true,
 					"bPaginate": false
 				} );
-				new FixedColumns( oTable, {
+				new $.fn.dataTable.FixedColumns( oTable, {
 					"sLeftWidth": 'relative',
 					"iLeftWidth": 20
 				} );
@@ -482,7 +482,7 @@
 		"bScrollCollapse": true,
 		"bPaginate": false
 	} );
-	new FixedColumns( oTable, {
+	new $.fn.dataTable.FixedColumns( oTable, {
 		"sLeftWidth": 'relative',
 		"iLeftWidth": 20
 	} );
