--- a/themed.html
+++ b/themed.html
@@ -9,11 +9,11 @@
 		<link rel="stylesheet" type="text/css" href="../../media/css/demo_page.css">
 		<link rel="stylesheet" type="text/css" href="../../media/css/jquery.dataTables_themeroller.css">
 		<link rel="stylesheet" type="text/css" href="../../examples/examples_support/themes/smoothness/jquery-ui-1.8.4.custom.css">
-		<link rel="stylesheet" type="text/css" href="media/css/FixedColumns.css">
+		<link rel="stylesheet" type="text/css" href="media/css/dataTables.fixedColumns.css">
 
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.js"></script>
 		<script type="text/javascript" charset="utf-8" src="../../media/js/jquery.dataTables.js"></script>
-		<script type="text/javascript" charset="utf-8" src="media/js/FixedColumns.js"></script>
+		<script type="text/javascript" charset="utf-8" src="media/js/dataTables.fixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
 				var oTable = $('#example').dataTable( {
@@ -24,7 +24,7 @@
 					"bScrollCollapse": true,
 					"bPaginate": false
 				} );
-				new FixedColumns( oTable );
+				new $.fn.dataTable.FixedColumns( oTable );
 			} );
 		</script>
 	</head>
@@ -478,7 +478,7 @@
 		"bScrollCollapse": true,
 		"bPaginate": false
 	} );
-	new FixedColumns( oTable );
+	new $.fn.dataTable.FixedColumns( oTable );
 } );</pre>
 
 
