New: DataTables 1.10 will prefer camcelCase notation - providing compatiblity for FixedColumns here
- In DataTables 1.10 both the old hungarian notation and the new
  camelCase notation will be supported for the input options - the
  reason to support both is to retain backwards compatiblity with the
  old way of intiialising DataTables. DataTables has a handy
  `_fnCamelToHungarian` method which converts from camelCase to
  DataTables' form of Hugarian notation ensuring this backwards
  compatiblity. We can make use of that method in FixedColumns to also
  move towards removing Hugarian notation.

- Left / right example updated to use this new form of notation

- This is conditional on the DataTables method being present - mapping
  is not done if it is not.

--- a/left_right_columns.html
+++ b/left_right_columns.html
@@ -24,29 +24,29 @@
 		<script type="text/javascript" charset="utf-8" src="media/js/dataTables.fixedColumns.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready( function () {
-				var oTable = $('#example').dataTable( {
-					"sScrollX": "100%",
-					"sScrollXInner": "150%",
-					"bScrollCollapse": true,
-					"fnDrawCallback": function ( oSettings ) {
+				var t = $('#example').dataTable( {
+					"scrollX": "100%",
+					"scrollXInner": "150%",
+					"scrollCollapse": true,
+					"drawCallback": function ( settings ) {
 						/* Need to redo the counters if filtered or sorted */
-						if ( oSettings.bSorted || oSettings.bFiltered ) {
-							for ( var i=0, iLen=oSettings.aiDisplay.length ; i<iLen ; i++ ) {
-								this.fnUpdate( i+1, oSettings.aiDisplay[i], 0, false, false );
-								this.fnUpdate( i+1, oSettings.aiDisplay[i], 6, false, false );
+						if ( settings.bSorted || settings.bFiltered ) {
+							for ( var i=0, ien=settings.aiDisplay.length ; i<ien ; i++ ) {
+								this.fnUpdate( i+1, settings.aiDisplay[i], 0, false, false );
+								this.fnUpdate( i+1, settings.aiDisplay[i], 6, false, false );
 							}
 						}
 					},
-					"aoColumnDefs": [
-						{ "bSortable": false, "sClass": "indexLeft", "aTargets": [ 0 ] },
-						{ "bSortable": false, "sClass": "indexRight", "aTargets": [ -1 ] }
+					"columnDefs": [
+						{ "sortable": false, "class": "indexLeft", "targets": [ 0 ] },
+						{ "sortable": false, "class": "indexRight", "targets": [ -1 ] }
 					],
-					"aaSorting": [[ 1, 'asc' ]]
+					"sorting": [[ 1, 'asc' ]]
 				} );
 				
-				new $.fn.dataTable.FixedColumns( oTable, {
-					"iLeftColumns": 1,
-					"iRightColumns": 1
+				new $.fn.dataTable.FixedColumns( t, {
+					"leftColumns": 1,
+					"rightColumns": 1
 				} );
 			} );
 		</script>
@@ -611,29 +611,29 @@
 			
 			<h1>Initialisation code</h1>
 			<pre>$(document).ready( function () {
-	var oTable = $('#example').dataTable( {
-		"sScrollX": "100%",
-		"sScrollXInner": "150%",
-		"bScrollCollapse": true,
-		"fnDrawCallback": function ( oSettings ) {
+	var t = $('#example').dataTable( {
+		"scrollX": "100%",
+		"scrollXInner": "150%",
+		"scrollCollapse": true,
+		"drawCallback": function ( settings ) {
 			/* Need to redo the counters if filtered or sorted */
-			if ( oSettings.bSorted || oSettings.bFiltered ) {
-				for ( var i=0, iLen=oSettings.aiDisplay.length ; i&lt;iLen ; i++ ) {
-					this.fnUpdate( i+1, oSettings.aiDisplay[i], 0, false, false );
-					this.fnUpdate( i+1, oSettings.aiDisplay[i], 6, false, false );
+			if ( settings.bSorted || settings.bFiltered ) {
+				for ( var i=0, ien=settings.aiDisplay.length ; i&lt;ien ; i++ ) {
+					this.fnUpdate( i+1, settings.aiDisplay[i], 0, false, false );
+					this.fnUpdate( i+1, settings.aiDisplay[i], 6, false, false );
 				}
 			}
 		},
-		"aoColumnDefs": [
-			{ "bSortable": false, "sClass": "indexLeft", "aTargets": [ 0 ] },
-			{ "bSortable": false, "sClass": "indexRight", "aTargets": [ -1 ] }
+		"columnDefs": [
+			{ "sortable": false, "class": "indexLeft", "targets": [ 0 ] },
+			{ "sortable": false, "class": "indexRight", "targets": [ -1 ] }
 		],
-		"aaSorting": [[ 1, 'asc' ]]
+		"sorting": [[ 1, 'asc' ]]
 	} );
 	
-	new $.fn.dataTable.FixedColumns( oTable, {
-		"iLeftColumns": 1,
-		"iRightColumns": 1
+	new $.fn.dataTable.FixedColumns( t, {
+		"leftColumns": 1,
+		"rightColumns": 1
 	} );
 } );</pre>
 
