Fix - examples: Displayed initialisation code didn't match used code

--- a/css_size.html
+++ b/css_size.html
@@ -488,7 +488,9 @@
 		"sScrollXInner": "150%",
 		"bScrollCollapse": true
 	} );
-	new $.fn.dataTable.FixedColumns( oTable );
+	new $.fn.dataTable.FixedColumns( oTable, {
+		"sHeightMatch": "none"
+	} );
 } );</pre>
 
 
